# Gemoney

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  libgemoneyconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: lint_06_script.sh  test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build_msvc/: README.md  common.vcxproj  gemoney.sln  gemoney_config.h  libsecp256k1_config.h  msvc-autogen.py
contrib/: README.md  gemoney-cli.bash-completion  gemoney-qt.pro  gemoney-tx.bash-completion  (+4 more)
doc/man/: Makefile.am  gemoney-cli.1  gemoney-qt.1  gemoney-tx.1  gemoney-wallet.1  gemoneyd.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  blockencodings.h  blockfilter.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  flatfile.h  fs.h  gemoney-cli-res.rc  gemoney-cli.cpp  gemoney-tx-res.rc  gemoney-tx.cpp  gemoney-wallet-res.rc  gemoney-wallet.cpp  (+64 more)
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/compat/: assumptions.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.h  params.h  tx_check.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  poly1305.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha512.h  siphash.h
src/crypto/ctaes/: README.md
src/index/: base.h  blockfilterindex.h  txindex.h
src/interfaces/: README.md  chain.h  handler.h  node.cpp  node.h  wallet.h
src/node/: README.md  coin.h  psbt.h  transaction.h
src/policy/: feerate.h  fees.h  policy.h  rbf.h  settings.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  gemoney.cpp  gemoney.h  gemoney.qrc  gemoney_locale.qrc  gemoneyaddressvalidator.cpp  gemoneyaddressvalidator.h  gemoneyamountfield.cpp  gemoneyamountfield.h  gemoneygui.cpp  gemoneygui.h  gemoneystrings.cpp  gemoneyunits.cpp  gemoneyunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  (+61 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: gemoney_af.ts  gemoney_af_ZA.ts  gemoney_am.ts  gemoney_ar.ts  gemoney_be_BY.ts  gemoney_bg.ts  gemoney_bg_BG.ts  gemoney_ca.ts  gemoney_ca@valencia.ts  gemoney_ca_ES.ts  gemoney_cs.ts  gemoney_cy.ts  gemoney_da.ts  gemoney_de.ts  gemoney_el.ts  gemoney_el_GR.ts  gemoney_en.ts  gemoney_en_GB.ts  gemoney_eo.ts  gemoney_es.ts  gemoney_es_AR.ts  gemoney_es_CL.ts  gemoney_es_CO.ts  gemoney_es_DO.ts  gemoney_es_ES.ts  gemoney_es_MX.ts  gemoney_es_UY.ts  gemoney_es_VE.ts  gemoney_et.ts  gemoney_et_EE.ts  gemoney_eu_ES.ts  gemoney_fa.ts  gemoney_fa_IR.ts  gemoney_fi.ts  gemoney_fr.ts  gemoney_fr_CA.ts  gemoney_fr_FR.ts  gemoney_gl.ts  gemoney_he.ts  gemoney_hi_IN.ts  (+53 more)
src/qt/res/: gemoney-qt-res.rc
src/qt/test/: Makefile  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.h  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  server.cpp  server.h  util.cpp  util.h
src/script/: descriptor.h  gemoneyconsensus.cpp  gemoneyconsensus.h  interpreter.cpp  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_gemoney_NativeSecp256k1.c  org_gemoney_NativeSecp256k1.h  org_gemoney_Secp256k1Context.c  org_gemoney_Secp256k1Context.h
src/secp256k1/src/java/org/gemoney/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Makefile  README.md  bswap_tests.cpp  crypto_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  main.cpp  merkle_tests.cpp  netbase_tests.cpp  script_tests.cpp  scriptnum10.h  setup_common.h  util.h  util_tests.cpp  util_threadnames_tests.cpp
src/test/data/: README.md  tx_valid.json
src/test/fuzz/: fuzz.h
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h  univalue_get.cpp
src/util/: bip32.h  bytevectorhash.h  error.h  fees.h  memory.h  moneystr.h  rbf.h  strencodings.h  system.cpp  system.h  threadnames.cpp  threadnames.h  time.cpp  time.h  url.h  validation.cpp  validation.h
src/wallet/: coincontrol.h  coinselection.h  crypter.h  db.cpp  db.h  feebumper.h  fees.h  load.h  psbtwallet.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.h  wallettool.cpp  wallettool.h  walletutil.cpp  walletutil.h
src/wallet/test/: init_test_fixture.h  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h
(+313 files in other folders)
