dist_man1_MANS=

if BUILD_GEMONEYD
  dist_man1_MANS+=gemoneyd.1
endif

if ENABLE_QT
  dist_man1_MANS+=gemoney-qt.1
endif

if BUILD_GEMONEY_CLI
  dist_man1_MANS+=gemoney-cli.1
endif

if BUILD_GEMONEY_TX
  dist_man1_MANS+=gemoney-tx.1
endif

if ENABLE_WALLET
if BUILD_GEMONEY_WALLET
  dist_man1_MANS+=gemoney-wallet.1
endif
endif
